fix menu button not visible

--- a/metager/resources/less/metager/pages/resultpage/result-page.less
+++ b/metager/resources/less/metager/pages/resultpage/result-page.less
@@ -1239,7 +1239,7 @@ a {
 }
 
 @media(max-width: @sidebar-opener-breakpoint) {
-  body>.sidebar-opener:not(.close) {
+  body#resultpage-body>.sidebar-opener:not(.close) {
     display: none;
   }
 }
